# poryaaaa-monorepo

./: .gitignore  .gitmodules  AGENTS.md  Agents.md  Apr 30 5-oclock findings.md  CMakeLists.txt  HW_AUDIO_SCAFFOLD_PLAN.md  README.md  TODOS.md  Thoughts and Concerns.md  Voicegroup Swapper.md  justfile  poryaaaa.cfg.example  pushback v1.md  recorder integration plan.md  scaffold-plan.md
cmd/: poryaaaa_render.c
docs/superpowers/plans/: 2026-06-03-cxx23-non-audio-build-probe.md  2026-06-03-cxx23-upgrade-roadmap.md
docs/superpowers/specs/: 2026-06-03-cxx23-non-audio-build-probe-design.md  2026-06-05-agentic-monorepo-framework-design.md
plans/: audio-long-run-memory-lifetime-findings.md  hw-psg-shared-frame-sequencer.md  m4a-engine-v2-clap-refactor.md  recorder-mid2agb-export-plan.md
plugin/: m4a_channel.c  m4a_engine.c  m4a_engine.h  m4a_engine_recorder.cpp  m4a_engine_recorder.h  m4a_gui.cpp  m4a_gui.h  m4a_params.c  m4a_plugin.c  m4a_plugin.h  project_asset_index.c  voicegroup_loader.c  voicegroup_loader.h  voicegroup_types.h
plugin/hw_audio/: CMakeLists.txt  hw_audio.c  hw_mix.c  hw_mix.h  hw_pcm.c  hw_pcm.h  hw_psg.c  hw_psg.h  hw_resample.c  hw_resample.h
plugin/m4a/: CMakeLists.txt  m4a_cgb.c  m4a_driver.c  m4a_driver.h  m4a_freq.c  m4a_internal.h  m4a_main.c  m4a_pcm.c  m4a_register_file.h  m4a_track.c
plugin/metal/: pugl_mac_metal.h  pugl_mac_metal.m
plugin/recorder/: CMakeLists.txt  recorder_core.cpp  recorder_core.h  smf_writer.cpp  smf_writer.h
plugin/voicegroup/: CMakeLists.txt  project_asset_index.h  vg_alloc.h  vg_discovery.c  vg_discovery.h  vg_keysplit.c  vg_keysplit.h  vg_log.c  vg_parser.c  vg_parser.h  vg_paths.c  vg_paths.h  vg_symbols.c  vg_symbols.h  vg_wav.c  voicegroup_loader.c  voicegroup_loader.h  voicegroup_state.h
scripts/: build-ccomidi.sh  build-m4l.sh  build-poryaaaa.sh  test-ccomidi.sh  test-m4l.sh  test-poryaaaa.sh
shared/gui/pugl/: imgui_impl_pugl.cpp  imgui_pugl_shell.cpp  imgui_pugl_shell.h
src/core/: sender_core.h
src/gui/: ccomidi_editor.cpp  editor_shell.cpp
src/plugin/: Info.plist  ccomidi_plugin.cpp  ccomidi_plugin_shared.h  voicegroup_bridge.cpp
test/: test_engine.c  test_recorder_core.cpp  test_wav_export.c
tools/: align_and_metrics.py  compare.sh
tools/captures/: analyze_capture_pairs.sh  capture_mgba_ss2.sh
tools/captures/analysis/shop/: levels.tsv
